--- a/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
+++ b/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
@@ -24,6 +24,7 @@ import org.axonframework.eventhandling.EventHandler;
 @RequiredArgsConstructor
 public class PasswordResetService {
 
+//todo refactor (remove UserRepository) to use a query to get the user (full CQRS)
 private final UserRepository userRepo;
 private final PasswordEncoder encoder;
 private final CommandGateway commandGateway;
@@ -50,18 +51,19 @@ public boolean resetPassword(String token, String newPassword, MetaRequest metaR
 try {
 
 var query = new FindByPasswordResetTokenQuery(PasswordResetToken.create(token), metaRequest);
-var tokenEntityList = queryGateway.query(
+var tokenEntity = queryGateway.query(
 query,
-ResponseTypes.multipleInstancesOf(PasswordResetResponse.class)
+PasswordResetResponse.class
 ).get();
 
-var tokenEntity = tokenEntityList.stream()
-.findFirst().orElse(null);
+if(tokenEntity == null) {
+	log.error("Token not found for token: {}", token);
+	return false;
+}
 
-
-if (tokenEntity == null || tokenEntity.getExpiration().isBefore(Instant.now())) {
-log.error("Token not found or expired for token: {}", token);
-return false;
+if (tokenEntity.getExpiration().isBefore(Instant.now())) {
+	log.error("Token expired for token: {}", token);
+	return false;
 };
 
 //todo move to full CQRS , by using a query to get the user
