--- a/src/main/resources/templates/tests/updatecontrollerintegrationtest.mustache
+++ b/src/main/resources/templates/tests/updatecontrollerintegrationtest.mustache
@@ -25,8 +25,8 @@ private CommandGateway commandGatewayUpdate;
 @Test
 void it_should_be_able_to_update_{{nameLower}}() {
 
-	String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway, getUserId()).getId().value();
-	Create{{name}}Command updated = {{name}}Fixtures.randomOneViaCommand(commandGatewayUpdate, getUserId());
+	String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway, getCurrentUser() ).getId().value();
+	Create{{name}}Command updated = {{name}}Fixtures.randomOneViaCommand(commandGatewayUpdate, getCurrentUser());
 
 	{{name}}Fixtures.byIdWaitExist({{nameLower}}Repository, existingId);
 	{{name}}Fixtures.byIdWaitExist({{nameLower}}Repository, updated.getId().value());
