--- a/src/main/resources/templates/infrastructure/security/securityInitializer.mustache
+++ b/src/main/resources/templates/infrastructure/security/securityInitializer.mustache
@@ -4,109 +4,112 @@ package {{package}};
 	import {{.}};
 {{/imports}}
 
+
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 import java.util.*;
 
 @Component
 @RequiredArgsConstructor
-public class {{className}} {
+public class SecurityInitializer {
 
-	private final RoleRepository roleRepository;
-	private final PermissionRepository permissionRepository;
-	private final RolePermissionRepository rolePermissionRepository;
-	private final UserRepository userRepository;
-	private final UserRoleRepository userRoleRepository;
-	private final PasswordEncoder passwordEncoder;
-	{{#isMultiTenant}}
-		private final TenantRepository tenantRepository;
-	{{/isMultiTenant}}
+private final RoleRepository roleRepository;
+private final PermissionRepository permissionRepository;
+private final RolePermissionRepository rolePermissionRepository;
+private final UserRepository userRepository;
+private final UserRoleRepository userRoleRepository;
+private final PasswordEncoder passwordEncoder;
+private final TenantRepository tenantRepository;
 
-	@PostConstruct
-	public void init() {
-	createPermissions();
-	var roles = createRoles();
-	assignPermissionsToRole(roles.get(ROLE_ADMIN));
-	createUserIfNotExist(ADMIN_USERNAME, PASSWORD_ADMIN, roles.get(ROLE_ADMIN));
-	createUserIfNotExist(USER_USERNAME, PASSWORD_USER, roles.get(ROLE_USER));
-	{{#isMultiTenant}}
-		addTenantAndAssignToUser(DEFAULT_TENANT, ADMIN_USERNAME);
-		addTenantAndAssignToUser(DEFAULT_TENANT, USER_USERNAME);
-	{{/isMultiTenant}}
-	}
+@PostConstruct
+@Transactional
+public void init() {
 
-	private void createPermissions() {
-	DEFAULT_PERMISSIONS.forEach(name ->
-	permissionRepository.findByNameAndTenantName(name,DEFAULT_TENANT).orElseGet(() ->
-	permissionRepository.save(Permission.builder()
-	.id(UUID.randomUUID().toString())
-	.name(name)
-	.build()
-	)
-	)
-	);
-	}
+var tenant = findOrCreateTenant(DEFAULT_TENANT);
 
-	private Map<String, Role> createRoles() {
-	var result = new HashMap<String, Role>();
-	result.put(ROLE_ADMIN, findOrCreateRole(ROLE_ADMIN));
-	result.put(ROLE_USER, findOrCreateRole(ROLE_USER));
-	return result;
-	}
+createPermissions(tenant);
 
-	private Role findOrCreateRole(String name) {
-	return roleRepository.findByNameAndTenantName(name,DEFAULT_TENANT).orElseGet(() ->
-	roleRepository.save(Role.builder()
-	.id(UUID.randomUUID().toString())
-	.name(name)
-	.build()
-	)
-	);
-	}
+var roles = createRoles(tenant);
 
-	private void assignPermissionsToRole(Role role) {
-	permissionRepository.findAll().forEach(permission ->
-	rolePermissionRepository.save(RolePermission.builder()
-	.id(UUID.randomUUID().toString())
-	.role(role)
-	.permission(permission)
-	.build()
-	)
-	);
-	}
+assignPermissionsToRole(roles.get(ROLE_ADMIN));
 
-	private void createUserIfNotExist(String username, String rawPassword, Role role) {
-	userRepository.findByUsernameAndTenantName(username,DEFAULT_TENANT).orElseGet(() -> {
-	var user = userRepository.save(CustomUser.builder()
-	.id(UUID.randomUUID().toString())
-	.username(username)
-	.password(passwordEncoder.encode(rawPassword))
-	.build());
+createUserIfNotExist(tenant, ADMIN_USERNAME, PASSWORD_ADMIN, roles.get(ROLE_ADMIN));
+createUserIfNotExist(tenant, USER_USERNAME, PASSWORD_USER, roles.get(ROLE_USER));
+}
 
-	userRoleRepository.save(UserRole.builder()
-	.id(UUID.randomUUID().toString())
-	.user(user)
-	.role(role)
-	.build()
-	);
-	return user;
-	});
-	}
+private Tenant findOrCreateTenant(String tenantName) {
+return tenantRepository.findByName(tenantName).orElseGet(() ->
+tenantRepository.save(Tenant.builder()
+.id(UUID.randomUUID().toString())
+.name(tenantName)
+.build()
+)
+);
+}
 
-	{{#isMultiTenant}}
-		private void addTenantAndAssignToUser(String tenantName, String username) {
-		var tenant = tenantRepository.findByName(tenantName).orElseGet(() ->
-		tenantRepository.save(Tenant.builder()
-		.id(UUID.randomUUID().toString())
-		.name(tenantName)
-		.build()
-		));
-		userRepository.findByUsernameAndTenantName(username,null).ifPresent(user -> {
-		user.setTenant(tenant);
-		userRepository.save(user);
-		});
-		}
-	{{/isMultiTenant}}
-	}
+private void createPermissions(Tenant tenant) {
+DEFAULT_PERMISSIONS.forEach(name ->
+permissionRepository.findByNameAndTenantName(name, tenant.getName()).orElseGet(() ->
+permissionRepository.save(Permission.builder()
+.id(UUID.randomUUID().toString())
+.name(name)
+.tenant(tenant)
+.build()
+)
+)
+);
+}
+
+private Map<String, Role> createRoles(Tenant tenant) {
+var result = new HashMap<String, Role>();
+result.put(ROLE_ADMIN, findOrCreateRole(tenant, ROLE_ADMIN));
+result.put(ROLE_USER, findOrCreateRole(tenant, ROLE_USER));
+return result;
+}
+
+private Role findOrCreateRole(Tenant tenant, String name) {
+return roleRepository.findByNameAndTenantName(name, tenant.getName()).orElseGet(() ->
+roleRepository.save(Role.builder()
+.id(UUID.randomUUID().toString())
+.name(name)
+.tenant(tenant)
+.build()
+)
+);
+}
+
+private void assignPermissionsToRole(Role role) {
+permissionRepository.findAll().forEach(permission ->
+rolePermissionRepository.save(RolePermission.builder()
+.id(UUID.randomUUID().toString())
+.role(role)
+.permission(permission)
+.build()
+)
+);
+}
+
+private void createUserIfNotExist(Tenant tenant, String username, String rawPassword, Role role) {
+userRepository.findByUsernameAndTenantName(username, tenant.getName()).orElseGet(() -> {
+var user = userRepository.save(CustomUser.builder()
+.id(UUID.randomUUID().toString())
+.username(username)
+.password(passwordEncoder.encode(rawPassword))
+.tenant(tenant)
+.build()
+);
+
+userRoleRepository.save(UserRole.builder()
+.id(UUID.randomUUID().toString())
+.user(user)
+.role(role)
+.build()
+);
+
+return user;
+});
+}
+}
