--- a/src/main/resources/templates/presentation/projection.mustache
+++ b/src/main/resources/templates/presentation/projection.mustache
@@ -74,7 +74,8 @@ if(event.getCreatedBy() !=null){
 }
 
 {{#isMultiTenant}}
-if(event.getTenant() != null) {
+if(entity.getTenant() == null && event.getTenant() != null) {
+	log.info("Tenant is null on entity, it will be,  updated with tenant ID: {}", event.getTenant().value());
 	entity.setTenant(new Tenant(event.getTenant().value()));
 }
 {{/isMultiTenant}}
