--- a/src/main/resources/templates/tests/controllerIntegrationTest.mustache
+++ b/src/main/resources/templates/tests/controllerIntegrationTest.mustache
@@ -8,12 +8,11 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 public class {{className}} extends BaseIntegrationTests {
 
-//@Test
+@Test
 void it_should_{{testAction}}() {
 ResponseEntity<String> response = this.get("{{endpoint}}");
 
 	assertThat(response.getStatusCode().value()).isEqualTo(200);
 	assertThat(response.getBody()).contains("\"code\":1");
-	assertThat(response.getBody()).contains("\"message\":\"{{expectedMessage}}\"");
 	}
 }
