feat: add prometheus and grafana config

--- a/src/main/resources/templates/infrastructure/security/securityConfig.mustache
+++ b/src/main/resources/templates/infrastructure/security/securityConfig.mustache
@@ -76,8 +76,11 @@ http
 "/v3/api-docs/**",
 "/v3/api-docs.yaml",
 "/swagger-resources/**",
-"/webjars/**"
+"/webjars/**",
+"/actuator/**"
+
 ).permitAll()
+.requestMatchers("/actuator/prometheus").permitAll()
 .requestMatchers("/api/v1/admin/**").hasAuthority(IS_ADMIN)
 .anyRequest().authenticated()
 )
