[wip] improve relations

--- a/src/main/resources/templates/application/command.mustache
+++ b/src/main/resources/templates/application/command.mustache
@@ -14,6 +14,10 @@ import java.util.Date;
 import org.axonframework.modelling.command.TargetAggregateIdentifier;
 import java.util.UUID;
 
+
+import java.time.*;
+import java.util.*;
+
 @Getter
 @Setter
 @AllArgsConstructor
