--- a/src/main/resources/templates/domain/vo.mustache
+++ b/src/main/resources/templates/domain/vo.mustache
@@ -11,6 +11,9 @@ import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.NoArgsConstructor;
 
+import java.time.*;
+import java.util.*;
+
 @Getter
 @Setter
 @NoArgsConstructor
