--- a/src/main/resources/templates/infrastructure/security/registerUser.mustache
+++ b/src/main/resources/templates/infrastructure/security/registerUser.mustache
@@ -62,6 +62,7 @@ String token = jwtService.generateToken(authentication, metaRequest);
 return AuthResponseDto.builder()
 .token(token)
 .username(user.getUsername())
+.id(user.getId())
 .code(1)
 .expirationAt(jwtService.extractExpiration(token))
 .message("Registration successful")
