--- a/src/main/resources/templates/domain/event.mustache
+++ b/src/main/resources/templates/domain/event.mustache
@@ -10,6 +10,9 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
+import java.time.*;
+import java.util.*;
+
 @Getter
 @Setter
 @AllArgsConstructor
