--- a/src/main/resources/templates/infrastructure/security/authService.mustache
+++ b/src/main/resources/templates/infrastructure/security/authService.mustache
@@ -55,6 +55,7 @@ return AuthResponseDto.builder()
 .code(1)
 .message("Login successful")
 .token(token)
+.id(principal.getId())
 .tenant(tenantId)
 .username(authentication.getName())
 .expirationAt(jwtService.extractExpiration(token))
