--- a/src/main/resources/templates/tests/fixtures.mustache
+++ b/src/main/resources/templates/tests/fixtures.mustache
@@ -1,7 +1,7 @@
-package {{package}};
+package {{packageEntity}};
 
 {{#imports}}
-	import {{.}};
+import {{.}};
 {{/imports}}
 
 import {{base}}.{{vo}}.*;
