--- a/src/main/resources/templates/front/swift/entityListView.mustache
+++ b/src/main/resources/templates/front/swift/entityListView.mustache
@@ -35,7 +35,7 @@ struct {{entity}}ListView: View {
                 } else {
                     List {
                         ForEach(viewModel.entities.filter { $0.deletedAt == nil }, id: \.id) { item in
-                            {{entity}}RowView({{entity | lower}}: item)
+                            {{entity}}RowView(entity: item)
                                 .contentShape(Rectangle())
                                 .onTapGesture {
                                     selected = item
