--- a/src/main/resources/templates/front/swift/entityRowView.mustache
+++ b/src/main/resources/templates/front/swift/entityRowView.mustache
@@ -1,109 +1,85 @@
-import SwiftUI
 import SwiftData
+import SwiftUI
 
 struct {{entity}}RowView: View {
-var entity: {{entity}}
+    var entity: {{entity}}
 
-var body: some View {
-HStack(alignment: .top, spacing: 12) {
-iconView
-.frame(width: 32, height: 32)
-.padding(.top, 4)
+    var body: some View {
+        HStack(alignment: .top, spacing: 12) {
+            iconView
+                .frame(width: 32, height: 32)
+                .padding(.top, 4)
 
-VStack(alignment: .leading, spacing: 6) {
-HStack {
-{{#fields}}
+            VStack(alignment: .leading, spacing: 6) {
+                HStack {
+                    {{#fields}}
 	{{#isDisplayName}}
-		Text(entity.{{name}})
-		.font(.headline)
-		.lineLimit(1)
-	{{/isDisplayName}}
+                            Text(entity.{{name}})
+                                .font(.headline)
+                                .lineLimit(1)
+                        {{/isDisplayName}}
 {{/fields}}
 
-{{#fields}}
-	{{#isDefaultIndicator}}
-		if entity.{{name}} {
-		Text("Default")
-		.font(.caption2)
-		.padding(.horizontal, 6)
-		.padding(.vertical, 2)
-		.background(Color.blue.opacity(0.15))
-		.foregroundColor(.blue)
-		.cornerRadius(4)
-		}
-	{{/isDefaultIndicator}}
-{{/fields}}
+                    Spacer()
 
-Spacer()
+                    Image(systemName: entity.status == .sync ? "checkmark.seal.fill" : "icloud.slash")
+                        .foregroundColor(entity.status == .sync ? .green : .orange)
+                        .font(.caption)
+                }
 
-Image(systemName: entity.status == .sync ? "checkmark.seal.fill" : "icloud.slash")
-.foregroundColor(entity.status == .sync ? .green : .orange)
-.font(.caption)
-}
-
-{{#fields}}
-	{{#isTypeIndicator}}
-		Text(entity.{{name}}.rawValue.capitalized)
-		.font(.subheadline)
-		.foregroundColor(.secondary)
-	{{/isTypeIndicator}}
-{{/fields}}
-
-{{#fields}}
+                {{#fields}}
 	{{#isUpdatedAt}}
-		if let updatedAt = entity.{{name}} {
-		Text("Updated: \(formattedDate(updatedAt))")
-		.font(.caption)
-		.foregroundColor(.gray)
-		}
+		{{#nullable}}
+                            if let updatedAt = entity.{{name}} {
+                                Text("Updated: \(formattedDate(updatedAt))")
+                                    .font(.caption)
+                                    .foregroundColor(.gray)
+                            }
+                        {{/nullable}}
+		{{^nullable}}
+                            Text("Updated: \(formattedDate(entity.{{name}}))")
+                                .font(.caption)
+                                .foregroundColor(.gray)
+                        {{/nullable}}
 	{{/isUpdatedAt}}
 {{/fields}}
+            }
 
-{{#fields}}
-	{{#isParentRelation}}
-		if let parent = entity.{{name}} {
-		Text("Parent: \(parent.name)")
-		.font(.caption2)
-		.foregroundColor(.gray)
-		.italic()
-		}
-	{{/isParentRelation}}
-{{/fields}}
-}
+            Spacer()
+        }
+        .padding(.vertical, 8)
+    }
 
-Spacer()
-}
-.padding(.vertical, 8)
-}
-
-private var iconView: some View {
-Group {
-{{#fields}}
+    private var iconView: some View {
+        {{#fields}}
 	{{#isIcon}}
-		if let systemIcon = UIImage(systemName: entity.{{name}}), !entity.{{name}}.isEmpty {
-		Image(systemName: entity.{{name}})
-		.resizable()
-		.scaledToFit()
-		.foregroundColor(.accentColor)
-		} else if !entity.{{name}}.isEmpty {
-		Image(entity.{{name}})
-		.resizable()
-		.scaledToFit()
-		} else {
-		Image(systemName: "questionmark.circle")
-		.resizable()
-		.scaledToFit()
-		.foregroundColor(.gray.opacity(0.5))
-		}
-	{{/isIcon}}
+                if let systemIcon = UIImage(systemName: entity.{{name}}), !entity.{{name}}.isEmpty {
+                    Image(systemName: entity.{{name}})
+                        .resizable()
+                        .scaledToFit()
+                        .foregroundColor(.accentColor)
+                } else if !entity.{{name}}.isEmpty {
+                    Image(entity.{{name}})
+                        .resizable()
+                        .scaledToFit()
+                } else {
+                    Image(systemName: "questionmark.circle")
+                        .resizable()
+                        .scaledToFit()
+                        .foregroundColor(.gray.opacity(0.5))
+                }
+            {{/isIcon}}
 {{/fields}}
-}
-}
+Image(systemName: "cube.box")
+            .resizable()
+            .scaledToFit()
+            .foregroundColor(.accentColor)
+    }
 
-private func formattedDate(_ date: Date) -> String {
-let formatter = DateFormatter()
-formatter.dateStyle = .short
-formatter.timeStyle = .short
-return formatter.string(from: date)
-}
+    private func formattedDate(_ date: Date) -> String {
+        let formatter = DateFormatter()
+        formatter.dateStyle = .short
+        formatter.timeStyle = .short
+        return formatter.string(from: date)
+    }
 }
