[wip]feat: add generator swift - fix sync api

--- a/src/main/resources/templates/front/swift/entityFormView.mustache
+++ b/src/main/resources/templates/front/swift/entityFormView.mustache
@@ -15,8 +15,10 @@ struct {{entity}}FormView: View {
             Form {
                 Section(header: Text("{{entity}} Information")) {
                     {{#fields}}
-    {{> SwiftFieldInput }}
-{{/fields}}
+                        {{^isId}}
+                        {{> SwiftFieldInput }}
+                        {{/isId}}
+                    {{/fields}}
                 }
 
                 Section {
